# aether

./: AGENTS.md  Dockerfile  GETTING_STARTED.md  GRAND_MANIFESTO.md  MANIFESTO.md  MANIFESTO_ELI5.md  README.md  claude_vertex_mcp.py  orchestrator.py  pyproject.toml  requirements.txt  toolsmith_mcp_server.py
REPORTS/: REFLECTION_001.md
agents/: aether_supervisor.md  aether_worker_template.md  reflection_agent.md  toolsmith_worker.md
assets/: diag1_eval_input.txt  diag2_gastown_input.txt  diag3_plane_input.txt  diagram_1_input.txt  diagram_2_input.txt  diagram_3_input.txt  mcp_orchestration_input.txt
core/: dream_mode.py  evolution.py  gas_town_engine.py  headless_runner.py  moe.py  orchestrator_plane.py  recipes.py  router.py  router_registry.json  toolsmith.py
docs/: ARCHITECTURE.md  BOOK_OF_AETHER.md  DEPLOYMENT_GCP.md  DEVELOPER_GUIDE.md  MCP_INSTALLATION.md  ORCHESTRATION_PLANE.md  README.md  ROUTING_EXPERIMENTS.md  SCION_ORCHESTRATION.md  experiment_results.txt
e2e_game/: Dockerfile  README.md  deploy.sh  index.html  main.py
evals/: judge_scoring.py
memory/: context_buffer.py  test_context_buffer.py
recipes/: voice_swarm_control.yaml
scripts/: deploy_cloud_run.sh  fastapi_voice_gateway.py  provision_aether.sh  ralph_voice_evals.py  run_mcp_routing_experiments.py  schedule_dream_mode.sh
spy_game/: agents.py  cli.py  main.py  mission_controller.py  router_config.py  state.py
tests/: test_aether_core.py  test_model_connectivity.py  test_model_skill_routing.py
tools/: claude_editor.py  complexity_analyzer.py
voice_client/: index.html
(+13 files in other folders)
